--- a/index.html
+++ b/index.html
@@ -3,270 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>h4ck3rfirst // Offensive Security Lab</title>
-    <meta name="description" content="Red team research, AD attacks, kernel exploits, and weaponized tools by h4ck3rfirst">
-    <link href="templatemo-nexus-style.css" rel="stylesheet">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>h4x</text></svg>">
-    <style>
-        /* Mobile Performance Overrides (inspired by dudenation's minimalism) */
-        @media (max-width: 768px) {
-            .matrix-rain, .particles, .data-streams, .grid-overlay, .scanlines, .noise-overlay { display: none !important; }
-            .cyber-gradient { animation-duration: 60s !important; filter: blur(20px) !important; } /* Slower, lighter blur */
-            .orb { filter: blur(40px) !important; opacity: 0.2 !important; animation-duration: 40s !important; }
-            body { background: linear-gradient(135deg, var(--darker-bg) 0%, #000 100%); } /* Static fallback gradient */
-        }
-        /* Desktop-only heavy effects */
-        @media (min-width: 769px) {
-            .cyber-bg { z-index: -1; } /* Ensure effects layer properly */
-        }
-        /* General perf: Reduce motion, optimize transforms */
-        * { will-change: transform; } /* Hint to browser for smoother anims */
-        .fade-up { transition: all 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94); } /* Smoother easing */
-        .social-icons a { color: var(--primary-cyan); font-size: 1.8rem; margin: 0 1rem; transition: all 0.2s; }
-        .social-icons a:hover { color: var(--primary-pink); transform: translateY(-3px); text-shadow: 0 0 15px currentColor; }
-    </style>
-=======
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22 "http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">h4x</text></svg>">
-    <style>
-        .social-icons a { color: var(--primary-cyan); font-size: 2rem; margin: 0 1.5rem; transition: all 0.3s; }
-        .social-icons a:hover { color: var(--primary-pink); transform: translateY(-5px); text-shadow: 0 0 20px currentColor; }
-    </style>
->>>>>>> c2d1711b6d6aa851d8c40678efeba84eb0267710
+    <title>h4ck3rfirst</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>skull</text></svg>">
+    <meta name="description" content="h4ck3rfirst - Offensive Security | Red Team | Exploit Dev">
 </head>
-<body id="top">
-<<<<<<< HEAD
-
-    <!-- Simplified Background: Lighter on Mobile -->
-=======
-
-    <!-- Cyberpunk Background (unchanged) -->
->>>>>>> c2d1711b6d6aa851d8c40678efeba84eb0267710
-    <div class="cyber-bg">
-        <div class="cyber-gradient"></div>
-        <div class="matrix-rain" id="matrixRain"></div> <!-- Disabled on mobile via CSS -->
+<body>
+    <div class="container">
+        <div class="terminal">
+            <div class="header">
+                <span class="title">h4ck3rfirst@grid:~$ whoami</span>
+                <button id="themeToggle" class="toggle">Dark/Light</button>
+            </div>
+            <div class="output">
+                <p><span class="prompt">┌──(</span><span class="user">h4ck3rfirst</span><span class="at">@</span><span class="host">darknet</span><span class="prompt">)-[</span><span class="path">~</span><span class="prompt">]</span></p>
+                <p><span class="cmd">└─$</span> cat profile.txt</p>
+                <br>
+                <p class="info">> Offensive Security Researcher</p>
+                <p class="info">> Active Directory | Kernel Exploits | Red Team</p>
+                <p class="info">> OSCP | OSWE | Bug Bounty Hunter</p>
+                <p class="info">> Currently breaking things that shouldn't break</p>
+                <br>
+                <p class="links">
+                    <a href="https://github.com/h4ck3rfirst" target="_blank">github</a> • 
+                    <a href="https://twitter.com/h4ck3rfirst" target="_blank">twitter</a> • 
+                    <a href="https://tryhackme.com/p/h4ck3rfirst" target="_blank">tryhackme</a> • 
+                    <a href="https://hackthebox.com/profile/xxxxxx" target="_blank">htb</a> • 
+                    <a href="mailto:h4ck3rfirst@proton.me">proton</a>
+                </p>
+                <br>
+                <p class="pgp">PGP: <span id="pgp">6F4A 1B8E 9D2C 3F7A</span> 
+                    <span class="copy" onclick="copyPGP()">copy</span>
+                </p>
+            </div>
+            <div class="cursor"></div>
+        </div>
+        <footer>© 2025 h4ck3rfirst // stay dangerous</footer>
     </div>
-    <div class="particles" id="particlesContainer"></div> <!-- Reduced count below -->
-    <div class="data-streams" id="dataStreams"></div> <!-- Disabled on mobile -->
-    <div class="orb orb1"></div>
-    <div class="orb orb2"></div>
-    <div class="orb orb3"></div>
-    <div class="grid-overlay"><div class="grid-lines"></div><div class="grid-glow"></div></div>
-    <div class="scanlines"></div>
-    <div class="noise-overlay"></div>
 
-    <!-- NAVIGATION (Unchanged, but lighter) -->
-    <nav>
-        <div class="nav-container">
-            <a href="#top" class="logo">h4ck3rfirst</a>
-            <ul class="nav-links">
-                <li><a href="#blog">Writeups</a></li>
-                <li><a href="#tools">Tools</a></li>
-                <li><a href="#labs">Labs</a></li>
-                <li><a href="#social">Contact</a></li>
-            </ul>
-            <div class="nav-bottom">
-                <a href="mailto:h4ck3rfirst@proton.me" class="cyber-button">Secure Drop</a>
-            </div>
-            <button class="mobile-menu-button" id="mobileMenuBtn">
-                <div class="hamburger"><span></span><span></span><span></span></div>
-            </button>
-        </div>
-    </nav>
-
-    <!-- HERO (Minimal like dudenation) -->
-    <section class="hero">
-        <div class="hero-container">
-            <h1 class="hero-title">
-                <span class="hero-nexus">h4ck3r</span><span class="hero-flow">first</span>
-            </h1>
-            <p class="hero-subtitle">Offensive Security • Red Team • Exploit Dev • Bug Bounty Hunter</p>
-            <div class="hero-buttons">
-                <a href="#blog" class="btn-primary">Latest Exploits</a>
-                <a href="https://github.com/h4ck3rfirst" target="_blank" class="btn-secondary">GitHub Arsenal</a>
-            </div>
-<<<<<<< HEAD
-            <div style="margin-top: 3rem; font-size: 1.2rem; opacity: 0.9;">
-                <i class="fas fa-broadcast-tower"></i> Active in the shadows since 2020
-=======
-            <div style="margin-top: 3rem; font-size: 1.3rem;">
-                <i class="fas fa-broadcast-tower"></i> Active in the shadows since 2020
->>>>>>> c2d1711b6d6aa851d8c40678efeba84eb0267710
-            </div>
-        </div>
-    </section>
-
-    <!-- LATEST WRITEUPS -->
-    <section class="features fade-up" id="blog">
-        <div class="features-container">
-            <div class="section-header">
-                <h2 class="section-title">Latest Operations</h2>
-                <p class="section-subtitle">Fresh 0days, bypasses, and red team tradecraft</p>
-            </div>
-            <div class="features-grid" id="blogPosts"></div>
-            <div style="text-align:center; margin-top: 4rem;">
-                <a href="posts/" class="btn-primary">All Writeups →</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- TOOLS & CHEATSHEETS -->
-    <section class="pricing fade-up" id="tools">
-        <div class="pricing-container">
-            <div class="section-header">
-                <h2 class="section-title">Arsenal</h2>
-                <p class="section-subtitle">Weapons forged by h4ck3rfirst</p>
-            </div>
-            <div class="pricing-grid">
-                <div class="pricing-card">
-                    <div class="plan-name">AD Attack Toolkit</div>
-                    <ul class="plan-features">
-                        <li>RBCD • Shadow Credentials</li>
-                        <li>Kerberos Delegation Abuse</li>
-                        <li>GPO & ACL Weaponization</li>
-                    </ul>
-                    <a href="posts/ad-attacks.html" class="btn-secondary">Launch Attack</a>
-                </div>
-                <div class="pricing-card featured">
-                    <div class="plan-name">Linux Privesc Bible</div>
-                    <ul class="plan-features">
-                        <li>2025 Kernel Exploits</li>
-                        <li>LXC/LXD Escape</li>
-                        <li>Systemd & Polkit Abuse</li>
-                    </ul>
-                    <a href="https://github.com/h4ck3rfirst/linux-privesc" target="_blank" class="btn-primary">Download Now</a>
-                </div>
-                <div class="pricing-card">
-                    <div class="plan-name">Custom Payloads</div>
-                    <ul class="plan-features">
-                        <li>Cobalt Strike Beacons</li>
-                        <li>AV/EDR Evasion</li>
-                        <li>Obfuscated C2</li>
-                    </ul>
-                    <a href="posts/payloads.html" class="btn-secondary">Get Payloads</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- SOCIAL MEDIA & CONTACT -->
-    <section class="contact fade-up" id="social">
-        <div class="contact-container">
-            <div class="section-header">
-                <h2 class="section-title">Signal Channels</h2>
-                <p class="section-subtitle">Find h4ck3rfirst in the dark</p>
-            </div>
-            <div class="social-icons" style="text-align:center; margin:4rem 0;">
-                <a href="https://twitter.com/h4ck3rfirst" target="_blank" title="Twitter/X"><i class="fab fa-twitter"></i></a>
-                <a href="https://github.com/h4ck3rfirst" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                <a href="https://discord.com/users/h4ck3rfirst" target="_blank" title="Discord"><i class="fab fa-discord"></i></a>
-                <a href="https://tryhackme.com/p/h4ck3rfirst" target="_blank" title="TryHackMe"><i class="fas fa-terminal"></i></a>
-                <a href="https://hackthebox.com/h4ck3rfirst" target="_blank" title="HackTheBox"><i class="fas fa-cube"></i></a>
-                <a href="mailto:h4ck3rfirst@proton.me" title="ProtonMail"><i class="fas fa-envelope"></i></a>
-            </div>
-            <p style="text-align:center; max-width:700px; margin:2rem auto; opacity:0.8;">
-                All links are real — update them with your actual profiles.<br>
-                PGP key available on request • Only encrypted communication accepted.
-            </p>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="footer-content">
-            <p>© 2025 h4ck3rfirst // Stay dangerous. Stay anonymous.</p>
-            <p class="footer-credit">Neon theme by <a href="https://templatemo.com" target="_blank">TemplateMo</a></p>
-        </div>
-    </footer>
-
-    <script src="templatemo-nexus-scripts.js"></script>
     <script>
-<<<<<<< HEAD
-        // Optimized JS: Detect mobile and reduce load
-        const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) || window.innerWidth <= 768;
-        
-        // Lazy-load effects only on desktop
-        if (!isMobile) {
-            // Full effects
-            generateMatrixRain();
-            generateParticles();
-            generateDataStreams();
-        } else {
-            // Minimal: Just static gradient, no JS-generated elements
-            document.body.style.background = 'linear-gradient(135deg, var(--darker-bg) 0%, #000 100%)';
+        // Dark/Light Mode Toggle
+        const toggle = document.getElementById('themeToggle');
+        const body = document.body;
+        const savedTheme = localStorage.getItem('theme');
+
+        if (savedTheme) {
+            body.classList.add(savedTheme);
+            toggle.textContent = savedTheme === 'light' ? 'Light' : 'Dark';
         }
 
-        // Reduced particles on all devices (from 50 to 20)
-        function generateParticles() {
-            const particlesContainer = document.getElementById('particlesContainer');
-            const particleCount = isMobile ? 10 : 20; // 80% reduction on mobile
-            for (let i = 0; i < particleCount; i++) {
-                const particle = document.createElement('div');
-                particle.className = 'particle';
-                particle.style.left = `${Math.random() * 100}%`;
-                particle.style.animationDelay = `${Math.random() * 10}s`; // Shorter delays
-                particle.style.animationDuration = `${Math.random() * 30 + 20}s`; // Longer duration = less CPU
-                particlesContainer.appendChild(particle);
+        toggle.addEventListener('click', () => {
+            if (body.classList.contains('light')) {
+                body.classList.remove('light');
+                localStorage.setItem('theme', 'dark');
+                toggle.textContent = 'Dark';
+            } else {
+                body.classList.add('light');
+                localStorage.setItem('theme', 'light');
+                toggle.textContent = 'Light';
             }
+        });
+
+        // Copy PGP
+        function copyPGP() {
+            navigator.clipboard.writeText('6F4A 1B8E 9D2C 3F7A');
+            const el = document.getElementById('pgp');
+            el.textContent = 'COPIED!';
+            setTimeout(() => el.textContent = '6F4A 1B8E 9D2C 3F7A', 1500);
         }
-
-        // Throttled mousemove (only desktop)
-        if (!isMobile) {
-            let mouseTimer;
-            document.addEventListener('mousemove', (e) => {
-                if (mouseTimer) return;
-                mouseTimer = setTimeout(() => {
-                    // Orb movement (reduced frequency)
-                    const orbs = document.querySelectorAll('.orb');
-                    orbs.forEach((orb, index) => {
-                        const speed = (index + 1) * 0.01; // Slower
-                        const x = (e.clientX - window.innerWidth / 2) * speed;
-                        const y = (e.clientY - window.innerHeight / 2) * speed;
-                        orb.style.transform = `translate(${x}px, ${y}px)`;
-                    });
-                    mouseTimer = null;
-                }, 50); // 20fps throttle vs 60fps
-            });
-        }
-
-        // Rest of your JS (blog injector, etc.)
-=======
-        // Inject latest posts (edit these!)
->>>>>>> c2d1711b6d6aa851d8c40678efeba84eb0267710
-        const posts = [
-            { title: "Shadow Credentials Still Own 2025 Domains", date: "Nov 20", excerpt: "Bypassing latest Microsoft mitigations...", link: "posts/shadow-2025.html" },
-            { title: "New LPE via CVE-2025-xxxx", date: "Nov 15", excerpt: "From user to root in < 60 seconds", link: "posts/cve-2025-xxxx.html" },
-            { title: "Kerberos Silver Ticket in Modern AD", date: "Nov 08", excerpt: "Full walk-through with Rubeus & Mimikatz alternatives", link: "posts/silver-ticket.html" }
-        ];
-
-<<<<<<< HEAD
-        document.getElementById('blogPosts').innerHTML = posts.map(p => `
-            <div class="feature-card">
-                <div class="feature-icon">💀</div>
-                <h3>${p.title}</h3>
-                <p style="color:#00ffff; margin:0.5rem 0;">${p.date}</p>
-                <p>${p.excerpt}</p>
-                <a href="${p.link}" style="color:var(--primary-pink);">Read Full Report →</a>
-            </div>
-        `).join('');
-
-        // Load other functions only if not mobile
-        if (!isMobile) {
-            // Paste the rest of generateMatrixRain, generateDataStreams from original JS here if needed
-            // (They run only on desktop)
-        }
-=======
-        document.getElementById('blogPosts').innerHTML = posts.map(p => `
-            <div class="feature-card">
-                <div class="feature-icon">skull</div>
-                <h3>${p.title}</h3>
-                <p style="color:#00ffff; margin:0.5rem 0;">${p.date}</p>
-                <p>${p.excerpt}</p>
-                <a href="${p.link}" style="color:var(--primary-pink);">Read Full Report →</a>
-            </div>
-        `).join('');
->>>>>>> c2d1711b6d6aa851d8c40678efeba84eb0267710
     </script>
 </body>
 </html>
